# Quiz-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 20260513_0001_a1b2c3d4e5f6_create_roles.py  20260513_0002_b2c3d4e5f6a7_create_users.py  20260513_0003_c3d4e5f6a7b8_create_sessions.py  20260513_0004_d4e5f6a7b8c9_create_tests.py  20260513_0005_e5f6a7b8c9d0_create_questions.py  20260513_0006_f6a7b8c9d0e1_create_test_attempts.py  20260513_0007_a7b8c9d0e1f2_create_test_status_history.py  20260513_0008_b8c9d0e1f2a3_seed_default_roles.py  20260513_0009_c9d0e1f2a3b4_add_max_attempts.py  20260515_0010_d0e1f2a3b4c5_availability_fields.py  20260515_0011_e1f2a3b4c5d6_drop_sessions.py  20260515_0012_f2a3b4c5d6e7_email_lower_index.py  20260516_0013_a3b4c5d6e7f8_cascade_test_attempts.py
docs/: README.md
docs/backend/: api-routes.md  auth.md  database.md  migrations.md
docs/development/: linting.md  testing.md
docs/flows/: student-flow.md  teacher-flow.md
docs/frontend/: error-pages.md  frontend.md
docs/operations/: deployment.md
docs/overview/: architecture.md  getting-started.md
src/: config.py  main.py
src/blueprints/: auth.py  helpers.py  student.py  teacher.py
src/controllers/: auth_controller.py  quiz_controller.py  test_controller.py
src/database/: connection.py
src/models/: question.py  result.py  test.py  user.py
src/repositories/: base_repository.py  result_repository.py  test_repository.py  user_repository.py
src/services/: auth_service.py  quiz_service.py  test_service.py
src/static/css/: auth.css  errors.css  student.css  teacher.css
src/static/js/: auth.js  errors.js  student.js  teacher.js  topbar.js
src/templates/auth/: forgot_password.html  index.html  login.html  register.html
src/templates/errors/: 400.html  401.html  403.html  404.html  405.html  500.html  502.html  503.html  504.html  507.html  base.html
src/utils/: decorators.py  logging_config.py  rate_limit.py  text_match.py  timer.py  validators.py
tests/: conftest.py
tests/gui/: test_auth_routes.py  test_error_pages.py  test_flash_and_schedule.py  test_owner_check.py  test_published_immutable_gui.py  test_security.py  test_student_routes.py  test_teacher_routes.py
tests/integration/: test_published_immutable.py  test_quiz_service.py  test_repositories.py  test_scoring.py  test_test_service.py
tests/unit/: test_auth_service.py  test_controllers.py  test_validators.py
(+13 files in other folders)
