[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiz-system"
version = "0.1.0"
description = "Desktop application for creating and taking knowledge tests"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Bogdan Vitriak", email = "bvitriak@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "bcrypt>=4.0",
    "flask>=3.0",
    "flask-wtf>=1.2",
    "flask-limiter>=3.5",
]

[project.optional-dependencies]
prod = [
    "psycopg2>=2.9",
    "gunicorn>=22.0",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "coverage>=7.0",
    "ruff>=0.6",
    "pylint>=3.0",
    "mypy>=1.9",
]

[project.scripts]
quiz = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["src*"]

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --import-mode=importlib --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_empty = true
fail_under = 80

# ruff
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "alembic",
    "tests",
    "build",
    "dist",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E203",
    "E501",
]

# pylint
[tool.pylint.main]
py-version = "3.10"
ignore-paths = [
    "alembic/.*",
    "tests/.*",
]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-instance-attributes",
    "import-outside-toplevel",
    "cyclic-import",
    "unused-argument",
    "too-many-statements",
    "too-many-branches",
    "too-many-return-statements",
    "unsubscriptable-object",
    "not-callable",
]

[tool.pylint.format]
max-line-length = 100

# mypy
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
exclude = "(alembic/|tests/)"
